--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     //Butterknife
-    compile 'com.jakewharton:butterknife:8.4.0'
-}
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'}
