--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.thsk.hareskovskole">
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,10 +19,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeFragmentActivity"></activity>
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".messages.MessageActivity"
+            android:label="MessageActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".moneytransfer.MoneyTransferActivity"
+            android:label="moneyTransferActivity"
             android:theme="@style/AppTheme"></activity>
     </application>
 
