--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".moneytransfer.MoneyTransferActivity"
             android:label="moneyTransferActivity"
             android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".news.NewsDetailActivity"
+            android:label="newsDetailActivity"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
