--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".NewsActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme"></activity>
         <activity
