--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.jakewharton:butterknife:8.6.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
@@ -65,4 +65,7 @@ dependencies {
     // Urban Airship SDK
     compile 'com.urbanairship.android:urbanairship-sdk:8.6.+'
     compile 'com.google.android.gms:play-services-gcm:11.0.1'
+
+    //realm
+    compile 'io.realm:realm-android:0.87.4'
 }
