--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
 
     //realm
     compile 'io.realm:realm-android:0.87.4'
+
+    //retrofit (network library)
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
 }
