--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
 
     //retrofit (network library)
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
 }
