--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,9 +98,10 @@ dependencies {
     //Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
-    // Urban Airship SDK
-    compile 'com.urbanairship.android:urbanairship-sdk:8.6.+'
-    compile 'com.google.android.gms:play-services-gcm:11.0.1'
+    // Firebase
+    compile 'com.google.firebase:firebase-core:11.0.2'
+    compile 'com.google.firebase:firebase-messaging:11.0.2'
+    compile 'com.firebase:firebase-jobdispatcher:0.7.0'
 
     //realm
     compile 'io.realm:realm-android:0.87.4'
@@ -118,7 +119,5 @@ dependencies {
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
 
 
-
-
-
 }
+apply plugin: 'com.google.gms.google-services'
